src/test-c/test_fail/error/invalid_func_decl.c
int toto();

int main(){
    return 0;
}